--- a/is-2(1945).html
+++ b/is-2(1945).html
@@ -77,7 +77,14 @@
         <h2>Як можна було його отримати?</h2>
         <p>Можна було отримати в недавньому івенті під назвою "Підтримка з повітря".Проходив він так,вам за результативний бій давали сундуки з різними степенями класності.З контейнерів падали бустери та емблемкі.За ці емблеми можна купити в магазині камуфляж або ІС-2(1945).Разом з танком давалося легендарне камо.Ось таке:</p>
 <img class="img-fluid rounded mb-4" src="vendor/img/is-2camo.jpg" alt="">
-        <p>Оскільки це тяжкий танк то по логіці він повинен мати броню,так і є,але вразливих участків броні достатньо.Найчастіше вас будуть пробиватися НЛД,в ком.башню і в один участок броні біля гармати,якщо вміти танкувать то в принципі цей танк може справлятись з його назначенням,але треба багато мансувать. </p>
+<h2>Сам танк</h2>
+        <p>Оскільки це тяжкий танк то по логіці він повинен мати броню,так і є,
+але вразливих участків броні достатньо.
+Найчастіше вас будуть пробиватися НЛД,
+в ком.башню і в один участок броні біля гармати,я
+кщо вміти танкувать то в принципі цей танк може справлятись з його назначенням,
+але треба багато мансувать.Далі що по гарматі ,ну советский деструктор,з малим ДПМ-ом,точність більш менш норм,але сводка 6с.,пробиття може трохи нехватає </p>
+<img class="img-fluid rounded mb-4" src="vendor/img/is-2destruct.jpg" alt="">
         <p></p>
       </div>
     </div>
