--- a/is-2(1945).html
+++ b/is-2(1945).html
@@ -83,9 +83,9 @@
 Найчастіше вас будуть пробиватися НЛД,
 в ком.башню і в один участок броні біля гармати,я
 кщо вміти танкувать то в принципі цей танк може справлятись з його назначенням,
-але треба багато мансувать.Далі що по гарматі ,ну советский деструктор,з малим ДПМ-ом,точність більш менш норм,але сводка 6с.,пробиття може трохи нехватає </p>
+але треба багато мансувать.</p><p>Далі що по гарматі ,ну советский деструктор,з малим ДПМ-ом,точність більш менш норм,але сводка 6с.,пробиття може трохи нехватає і накінець УВН-и вверх 25° вниз 6°,від рельєфу не пограєш,але страждати не доводиться</p>
 <img class="img-fluid rounded mb-4" src="vendor/img/is-2destruct.jpg" alt="">
-        <p></p>
+        <p>Ну що можна сказати про динаміку любого ТТ?Тут така тема,35км/г вперед і 12км/г назад,але середня швидкість 32км/г,мучаться не приходиться як на стоковому КВ-3,але на відміну від КВ в нього швидкість повороту шассі нища, топто вас будуть крутить лт на ізі.</p>
       </div>
     </div>
     <!-- /.row -->
