--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="lerner-6-col.html"><img class="card-img-top" src="vendor/img/patch8.0.jpg" alt=""></a>
+          <a href="patch8.0.html"><img class="card-img-top" src="vendor/img/patch8.0.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="patch8.0.html">Що нового в патчі 8.0</a>
