--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <a href="patch8.0.html"><img class="card-img-top" src="vendor/img/patch8.0.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="patch8.0.html">Що нового в патчі 8.0</a>
+              <a href="patch8.0.html">Що нового в патчі 8.0?</a>
             </h4>
             <p class="card-text">Які будуть графічні покращення?Довгождана гілка Нових американських ТТ</p>
           </div>
