--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('vendor/img/ad.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3><a href="#">Пекло</h3>
+            <h3><a href="is-2(1945).html">Пекло</h3>
             <p>Я пройшов його і що отримав?</p>
 </a> 
           </div>
