--- a/patch8.0.html
+++ b/patch8.0.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Головна</a>
+            <a class="nav-link" href="index.html">Головна</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="news.html">Новини</a>
@@ -57,8 +57,8 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">
+    Патч 8.0<p><small>Знову прорив в графіці?</small></p>
     </h1>
 
     <ol class="breadcrumb">
@@ -71,12 +71,14 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
+        <img class="img-fluid rounded mb-4" src="vendor/img/patch8.0.jpg" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
+        <h2>Згадаємо що було</h2>
+        <p>Того року під час стріму на офіційному каналі бліца,разраби показували графічні покращення:декалі пробою, откат гармати і реалістична вода.Це були основні графічні покращення,а зараз?Чи можна порівняти 8.0 з 7.0,саме настільки багато графічних змін?Так може,я не зря згадав про 7.0, бо на тому стріму разраби сказали що можуть ще
+добавити динамічну підвіску,можуть добавити ефект наліпання бруду,снігу,піску і води.На недавньому стрімі вони це все показували,але того року вони ще сказали що можуть добавити механіку перевертання (зараз перевернутися вверх днищем неможливо),ну це лише догадки,але все ж буде прикольно над раками🦀 сміятись як вони перевертаються.</p>
+<h2>Про динамічну підвіску</h2>
+        <p>Динамічну підвіску як говорять разраби,було важко добавити цю механіку,це тому що кожен танк має різні типи підвіски,хтось має шахматну(часто німці), хтось послідовну,і кожна має свою жорсткість,плюс наприклад в режимі гравітація також свої особливі моменти,і казали вони що вони перепробували різні механіки і ця більш оптимальна і буде доступна навіть для справжніх калькуляторів,що означає без просадок FPS </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
       </div>
     </div>
