--- a/patch8.0.html
+++ b/patch8.0.html
@@ -63,9 +63,9 @@
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index.html">Головна</a>
       </li>
-      <li class="breadcrumb-item active">About</li>
+      <li class="breadcrumb-item active">Патчі 8.0</li>
     </ol>
 
     <!-- Intro Content -->
@@ -79,8 +79,11 @@
 добавити динамічну підвіску,можуть добавити ефект наліпання бруду,снігу,піску і води.На недавньому стрімі вони це все показували,але того року вони ще сказали що можуть добавити механіку перевертання (зараз перевернутися вверх днищем неможливо),ну це лише догадки,але все ж буде прикольно над раками🦀 сміятись як вони перевертаються.</p>
 <h2>Про динамічну підвіску</h2>
         <p>Динамічну підвіску як говорять разраби,було важко добавити цю механіку,це тому що кожен танк має різні типи підвіски,хтось має шахматну(часто німці),</p><img class="img-fluid rounded mb-4" src="vendor/img/germanshasi.jpg" alt=""><p> хтось послідовну</p><img class="img-fluid rounded mb-4" src="vendor/img/shasi.jpg" alt=""><p>,і кожна має свою жорсткість,плюс наприклад в режимі гравітація також свої особливі моменти,і казали вони що вони перепробували різні механіки і ця більш оптимальна і буде доступна навіть для справжніх калькуляторів,що означає без просадок FPS </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
-      </div>
+     <h2>Ефекти наліпання</h2>
+        <p>Ця механіка поки що буде доступна лише для американських ТТ і ще одного прем танка в одному івенті на день народження бліца,це тому що для цього потрібно щоб моделька мала дуже високу якість, інакше ця механіка буде буде виглядати жахливо,вони сказали що будуть перемальовувати всі модельки в кращу якість,для слабих пристроїв ця фіча не буде доступна.
+Що за механіка?Що вона дає?Вона покращує вигляд самого танку тим що на нього наліпає пруд,сніг,пісок ну і коли ви заїдете в воду то танк буде мокрим.Фото механіки 👇:</p>
+
+      </div
     </div>
     <!-- /.row -->
 
