--- a/patch8.0.html
+++ b/patch8.0.html
@@ -82,7 +82,10 @@
      <h2>Ефекти наліпання</h2>
         <p>Ця механіка поки що буде доступна лише для американських ТТ і ще одного прем танка в одному івенті на день народження бліца,це тому що для цього потрібно щоб моделька мала дуже високу якість, інакше ця механіка буде буде виглядати жахливо,вони сказали що будуть перемальовувати всі модельки в кращу якість,для слабих пристроїв ця фіча не буде доступна.
 Що за механіка?Що вона дає?Вона покращує вигляд самого танку тим що на нього наліпає пруд,сніг,пісок ну і коли ви заїдете в воду то танк буде мокрим.Фото механіки 👇:</p>
-
+<img class="img-fluid rounded mb-4" src="vendor/img/pbr1.jpg" alt="">
+<img class="img-fluid rounded mb-4" src="vendor/img/pbr2.jpg" alt="">
+<img class="img-fluid rounded mb-4" src="vendor/img/pbr3.jpg" alt="">
+<img class="img-fluid rounded mb-4" src="vendor/img/pbr4.jpg" alt="">
       </div
     </div>
     <!-- /.row -->
