--- a/patch8.0.html
+++ b/patch8.0.html
@@ -86,7 +86,10 @@
 <img class="img-fluid rounded mb-4" src="vendor/img/pbr2.jpg" alt="">
 <img class="img-fluid rounded mb-4" src="vendor/img/pbr3.jpg" alt="">
 <img class="img-fluid rounded mb-4" src="vendor/img/pbr4.jpg" alt="">
-      </div
+      <h2>Світло</h2>
+     <p>Більшість гравців скаржаться на те що на картах wot blitz неправильне освітлення,у цьому патчі це виправили,так щей добавили якісніше віддзеркалення світла, виглядатиме ще красивіше.Фото: </p>
+<img class="img-fluid rounded mb-4" src="vendor/img/lights.jpg" alt="">
+      </div>
     </div>
     <!-- /.row -->
 
