--- a/patch8.0.html
+++ b/patch8.0.html
@@ -89,6 +89,8 @@
       <h2>Світло</h2>
      <p>Більшість гравців скаржаться на те що на картах wot blitz неправильне освітлення,у цьому патчі це виправили,так щей добавили якісніше віддзеркалення світла, виглядатиме ще красивіше.Фото: </p>
 <img class="img-fluid rounded mb-4" src="vendor/img/lights.jpg" alt="">
+      <h2>Нові Американські ТТ</h2>
+     <p></p>
       </div>
     </div>
     <!-- /.row -->
