--- a/patch8.0.html
+++ b/patch8.0.html
@@ -91,7 +91,8 @@
      <p>Більшість гравців скаржаться на те що на картах wot blitz неправильне освітлення,у цьому патчі це виправили,так щей добавили якісніше віддзеркалення світла, виглядатиме ще красивіше.Фото: </p>
 <img class="img-fluid rounded mb-4" src="vendor/img/lights.jpg" alt="">
       <h2>Нові Американські ТТ</h2>
-     <p></p>
+     <p>Коли виходив патч 7.0,разом з ним виходила нова гілка Британців,8.0 нічим невідрізняєтьтся в цьому плані невідрізняється,буде нова гілка Американських ТТ,знаю що чутки про нові ТТ були вже давно, навіть більше скажу вони тестилися в рандомі і були скріни ще 7.8.Відео по нових ТТ: </p>
+
       </div>
     </div>
     <!-- /.row -->
