--- a/reviews-home-2.html
+++ b/reviews-home-2.html
@@ -80,13 +80,13 @@
           <div class="col-lg-6">
             <h2 class="card-title">IS-2(1945)</h2>
             <p class="card-text">Біль,нерви та впавша стата.Варто цього? </p>
-            <a href="is-2(1945).html" class="btn btn-primary">Read More &rarr;</a>
+            <a href="is-2(1945).html" class="btn btn-primary">Переглянути</a>
           </div>
         </div>
       </div>
       <div class="card-footer text-muted">
-        Posted on January 1, 2017 by
-        <a href="#">Start Bootstrap</a>
+        Posted on 18 Травня
+        
       </div>
     </div>
 
