--- a/reviews-home-2.html
+++ b/reviews-home-2.html
@@ -85,8 +85,8 @@
         </div>
       </div>
       <div class="card-footer text-muted">
-        Posted on 18 Травня
-        
+        Posted on 18 Травня 2021
+        <a href="#">Dimaly-scorp</a>
       </div>
     </div>
 
