--- a/patch8.0.html
+++ b/patch8.0.html
@@ -92,7 +92,7 @@
 <img class="img-fluid rounded mb-4" src="vendor/img/lights.jpg" alt="">
       <h2>Нові Американські ТТ</h2>
      <p>Коли виходив патч 7.0,разом з ним виходила нова гілка Британців,8.0 нічим невідрізняєтьтся в цьому плані невідрізняється,буде нова гілка Американських ТТ,знаю що чутки про нові ТТ були вже давно, навіть більше скажу вони тестилися в рандомі і були скріни ще 7.8.Відео по нових ТТ: </p>
-
+<iframe width="1266" height="720" src="https://www.youtube.com/embed/GQByOPmlMNs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
     <!-- /.row -->
