--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <a href="lerner-6-col.html"><img class="card-img-top" src="https://media-wbp.wgcdn.co/media/filer_public/images/realistic-battles_1920x1080_top-bottom.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="lerner-6-col.html">Реалістичні бої</a>
+              <a href="https://startbootstrap.com/previews/small-business">Реалістичні бої</a>
             </h4>
             <p class="card-text">Що нового?Мій власний відгук по режиму</p>
           </div>
