--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+<link  rel="icon" type="image/x-icon" href="vendor/img/black_scorpion.png" />
+<link  rel="shortcut icon" type="image/x-icon" href="vendor/img/black_scorpion.png"  />
 </head>
 
 <body>
